# sem42_routine_vis

./: .gitignore  Cargo.toml  Dockerfile  Shuttle.toml  docker-compose.yaml  dumpdata.js  index.css  index.js  print.typ  tablex.typ
frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/: index.css  index.ts
frontend/static/: index.html
public/: index.css  index.html  index.js  manifest.json
src/: lib.rs  main.rs  students_1801.rs
