[package]
name = "sem41_routine_vis"
version = "0.1.0"
edition = "2021"
publish = false

[lib]

[dependencies]
shuttle-service = { version = "0.11.0", features = ["web-axum"] }
shuttle-shared-db = { version = "0.11.0", features = ["sqlx", "postgres"] }
shuttle-static-folder = "0.11.0"
sync_wrapper = "0.1.2"

axum = "0.6.9"
sqlx = "0.6.2"
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.4.0", features = ["fs", "redirect"] }
tower-cookies = "0.9.0"

serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.94"
tracing = "0.1.37"
tap = "1.0.1"
