[package]
name = "sem41_routine_vis"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
shuttle-axum = { version = "0.23.0" }
shuttle-runtime = { version = "0.23.0" }
shuttle-shared-db = { version = "0.23.0", features = ["sqlx", "postgres"] }
shuttle-static-folder = "0.23.0"

axum = { version = "0.6.20", features = [] }
sqlx = { version = "0.7.1", features = ["rust_decimal"] }
tokio = { version = "1.29.1" }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.4.3", features = ["fs", "redirect"] }
tower-cookies = "0.9.0"

rust_decimal = "1.31.0"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
tracing = "0.1.37"
tap = "1.0.1"
