[package]
name = "sem41_routine_vis"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# shuttle-axum = { version = "0.23.0" }
# shuttle-runtime = { version = "0.23.0" }
# shuttle-shared-db = { version = "0.23.0", features = ["sqlx", "postgres-rustls"] }
# shuttle-static-folder = "0.23.0"

axum = { version = "0.6.20", features = [] }
sqlx = { version = "0.7.1", features = [
    "runtime-tokio",
    "rust_decimal",
    "postgres",
] }
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.4.3", features = ["fs", "redirect"] }
tower-cookies = "0.9.0"

rust_decimal = "1.32.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tap = "1.0.1"
